// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`declastruct CLI workflow given: a declastruct resources file when: generating a plan via declastruct CLI then: plan structure matches snapshot 1`] = `
[
  {
    "class": "DeclaredAwsVpc",
    "slug": "DeclaredAwsVpc.declastruct-acceptance-vpc.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcSubnet",
    "slug": "DeclaredAwsVpcSubnet.declastruct-acceptance-subnet-public-1a.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcSubnet",
    "slug": "DeclaredAwsVpcSubnet.declastruct-acceptance-subnet-private-1a.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcSecurityGroup",
    "slug": "DeclaredAwsVpcSecurityGroup.declastruct-acceptance-sg.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcInternetGateway",
    "slug": "DeclaredAwsVpcInternetGateway.declastruct-acceptance-igw.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcRouteTable",
    "slug": "DeclaredAwsVpcRouteTable.declastruct-acceptance-rtb-public.[HASH]",
  },
  {
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-lambda-role.[HASH]",
  },
  {
    "class": "DeclaredAwsIamRolePolicyAttachedInline",
    "slug": "DeclaredAwsIamRolePolicyAttachedInline.cloudwatch-logs.namedeclastruct-acceptance-lambda-role.[HASH]",
  },
  {
    "class": "DeclaredAwsLambda",
    "slug": "DeclaredAwsLambda.declastruct-acceptance-lambda.[HASH]",
  },
  {
    "class": "DeclaredAwsLambdaVersion",
    "slug": "DeclaredAwsLambdaVersion.code04aba62b483510cebb72e4ea0672d146bdd080e3cbf23817a72192425dfb689dconfig2ac3d1dc01dd83848ed9476b5ad7c.[HASH]",
  },
  {
    "class": "DeclaredAwsLambdaAlias",
    "slug": "DeclaredAwsLambdaAlias.namedeclastruct-acceptance-lambda.LIVE.[HASH]",
  },
  {
    "class": "DeclaredAwsCloudwatchLogGroup",
    "slug": "DeclaredAwsCloudwatchLogGroup.declastructacceptance-testwith-retention.[HASH]",
  },
  {
    "class": "DeclaredAwsCloudwatchLogGroupReportDistOfPattern",
    "slug": "DeclaredAwsCloudwatchLogGroupReportDistOfPattern.null.100.nameawslambdadeclastruct-acceptance-lambda.message.since[DATE].[HASH]",
  },
  {
    "class": "DeclaredAwsCloudwatchLogGroupReportCostOfIngestion",
    "slug": "DeclaredAwsCloudwatchLogGroupReportCostOfIngestion.namesawslambdadeclastruct-acceptance-lambda.since[DATE]until[DATE].[HASH]",
  },
  {
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-ec2-role.[HASH]",
  },
  {
    "class": "DeclaredAwsIamRolePolicyAttachedManaged",
    "slug": "DeclaredAwsIamRolePolicyAttachedManaged.arnarnawsiamawspolicyAmazonSSMManagedInstanceCore.namedeclastruct-acceptance-ec2-role.[HASH]",
  },
  {
    "class": "DeclaredAwsIamInstanceProfile",
    "slug": "DeclaredAwsIamInstanceProfile.declastruct-acceptance-ec2-profile.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2LaunchTemplate",
    "slug": "DeclaredAwsEc2LaunchTemplate.declastruct-acceptance-nat-template.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2Instance",
    "slug": "DeclaredAwsEc2Instance.declastruct-acceptance-nat.[HASH]",
  },
  {
    "class": "DeclaredAwsVpcRouteTable",
    "slug": "DeclaredAwsVpcRouteTable.declastruct-acceptance-rtb-private.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2LaunchTemplate",
    "slug": "DeclaredAwsEc2LaunchTemplate.declastruct-acceptance-template.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2Instance",
    "slug": "DeclaredAwsEc2Instance.declastruct-acceptance-instance.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2InstanceSession",
    "slug": "DeclaredAwsEc2InstanceSession.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "class": "DeclaredAwsSsmSshTunnel",
    "slug": "DeclaredAwsSsmSshTunnel.port35432.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "class": "DeclaredAwsEc2SshKeyAuthorized",
    "slug": "DeclaredAwsEc2SshKeyAuthorized.declastruct-acceptance-seed.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "class": "DeclaredAwsBudget",
    "slug": "DeclaredAwsBudget.declastruct-acceptance-budget.[HASH]",
  },
  {
    "class": "DeclaredAwsBudgetNotification",
    "slug": "DeclaredAwsBudgetNotification.ACTUAL.namedeclastruct-acceptance-budget.GREATER_THAN.quant80unitPERCENTAGE.[HASH]",
  },
  {
    "class": "DeclaredAwsCloudwatchMetricAlarm",
    "slug": "DeclaredAwsCloudwatchMetricAlarm.declastruct-acceptance-alarm.[HASH]",
  },
  {
    "class": "DeclaredAwsCostAnomalyMonitor",
    "slug": "DeclaredAwsCostAnomalyMonitor.declastruct-acceptance-anomaly.[HASH]",
  },
  {
    "class": "DeclaredAwsCostAnomalySubscription",
    "slug": "DeclaredAwsCostAnomalySubscription.declastruct-acceptance-anomaly-sub.[HASH]",
  },
  {
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-budgets-action-role.[HASH]",
  },
  {
    "class": "DeclaredAwsBudgetAction",
    "slug": "DeclaredAwsBudgetAction.namedeclastruct-acceptance-budget.APPLY_IAM_POLICY.[HASH]",
  },
]
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: re-planning after apply to verify idempotency then: idempotent plan structure matches snapshot 1`] = `
[
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpc",
    "slug": "DeclaredAwsVpc.declastruct-acceptance-vpc.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcSubnet",
    "slug": "DeclaredAwsVpcSubnet.declastruct-acceptance-subnet-public-1a.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcSubnet",
    "slug": "DeclaredAwsVpcSubnet.declastruct-acceptance-subnet-private-1a.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcSecurityGroup",
    "slug": "DeclaredAwsVpcSecurityGroup.declastruct-acceptance-sg.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcInternetGateway",
    "slug": "DeclaredAwsVpcInternetGateway.declastruct-acceptance-igw.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcRouteTable",
    "slug": "DeclaredAwsVpcRouteTable.declastruct-acceptance-rtb-public.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-lambda-role.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamRolePolicyAttachedInline",
    "slug": "DeclaredAwsIamRolePolicyAttachedInline.cloudwatch-logs.namedeclastruct-acceptance-lambda-role.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsLambda",
    "slug": "DeclaredAwsLambda.declastruct-acceptance-lambda.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsLambdaVersion",
    "slug": "DeclaredAwsLambdaVersion.code04aba62b483510cebb72e4ea0672d146bdd080e3cbf23817a72192425dfb689dconfig2ac3d1dc01dd83848ed9476b5ad7c.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsLambdaAlias",
    "slug": "DeclaredAwsLambdaAlias.namedeclastruct-acceptance-lambda.LIVE.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCloudwatchLogGroup",
    "slug": "DeclaredAwsCloudwatchLogGroup.declastructacceptance-testwith-retention.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCloudwatchLogGroupReportDistOfPattern",
    "slug": "DeclaredAwsCloudwatchLogGroupReportDistOfPattern.null.100.nameawslambdadeclastruct-acceptance-lambda.message.since[DATE].[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCloudwatchLogGroupReportCostOfIngestion",
    "slug": "DeclaredAwsCloudwatchLogGroupReportCostOfIngestion.namesawslambdadeclastruct-acceptance-lambda.since[DATE]until[DATE].[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-ec2-role.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamRolePolicyAttachedManaged",
    "slug": "DeclaredAwsIamRolePolicyAttachedManaged.arnarnawsiamawspolicyAmazonSSMManagedInstanceCore.namedeclastruct-acceptance-ec2-role.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamInstanceProfile",
    "slug": "DeclaredAwsIamInstanceProfile.declastruct-acceptance-ec2-profile.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2LaunchTemplate",
    "slug": "DeclaredAwsEc2LaunchTemplate.declastruct-acceptance-nat-template.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2Instance",
    "slug": "DeclaredAwsEc2Instance.declastruct-acceptance-nat.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsVpcRouteTable",
    "slug": "DeclaredAwsVpcRouteTable.declastruct-acceptance-rtb-private.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2LaunchTemplate",
    "slug": "DeclaredAwsEc2LaunchTemplate.declastruct-acceptance-template.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2Instance",
    "slug": "DeclaredAwsEc2Instance.declastruct-acceptance-instance.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2InstanceSession",
    "slug": "DeclaredAwsEc2InstanceSession.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsSsmSshTunnel",
    "slug": "DeclaredAwsSsmSshTunnel.port35432.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsEc2SshKeyAuthorized",
    "slug": "DeclaredAwsEc2SshKeyAuthorized.declastruct-acceptance-seed.exiddeclastruct-acceptance-instance.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsBudget",
    "slug": "DeclaredAwsBudget.declastruct-acceptance-budget.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsBudgetNotification",
    "slug": "DeclaredAwsBudgetNotification.ACTUAL.namedeclastruct-acceptance-budget.GREATER_THAN.quant80unitPERCENTAGE.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCloudwatchMetricAlarm",
    "slug": "DeclaredAwsCloudwatchMetricAlarm.declastruct-acceptance-alarm.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCostAnomalyMonitor",
    "slug": "DeclaredAwsCostAnomalyMonitor.declastruct-acceptance-anomaly.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsCostAnomalySubscription",
    "slug": "DeclaredAwsCostAnomalySubscription.declastruct-acceptance-anomaly-sub.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsIamRole",
    "slug": "DeclaredAwsIamRole.declastruct-acceptance-budgets-action-role.[HASH]",
  },
  {
    "action": "KEEP",
    "class": "DeclaredAwsBudgetAction",
    "slug": "DeclaredAwsBudgetAction.namedeclastruct-acceptance-budget.APPLY_IAM_POLICY.[HASH]",
  },
]
`;
